--- a/app/views/locations/resultMap.html.erb
+++ b/app/views/locations/resultMap.html.erb
@@ -1,2 +1,63 @@
-<h1>Locations#resultMap</h1>
-<p>Find me in app/views/locations/resultMap.html.erb</p>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=320, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+<meta name="keywords" content="">
+<meta name="description" content="サイト全体の説明文を入力してください。">
+<!--
+<link rel="stylesheet" type="text/css" href="location/assets/stylesheets/style.css" media="screen">
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+<script type="text/javascript" src="js/jquery.bxSlider.min.js"></script>
+<script type="text/javascript" src="js/mapstyle.js"></script>
+-->
+
+</script>
+<script type="text/javascript">
+</script>
+<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js?ver=1.8.3"></script>
+<!--[if IE]>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<![endif]-->
+<!--[if lt IE 9]>
+<script src="http://cdn.liginc.co.jp/demo/2013/12/mapstyle/js/html5shiv-printshiv.js"></script>
+<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
+<![endif]-->
+</script>
+</head>
+
+
+<body onload="initialize();">
+<!-- <header> -->
+
+	<!-- メニューここから -->
+	<!-- <div id="menu">
+	<nav> -->
+		<!-- <li><a href="about.html"><img src="img/icon/icon1.png" width="28" height="28" alt="About">About</a></li>
+		<li><a href="free.html"><img src="img/icon/icon2.png" width="28" height="28" alt="Free">Free</a></li>
+		<li><a href="free.html"><img src="img/icon/icon3.png" width="28" height="28" alt="Free">Free</a></li>
+		<li><a href="mailto:メールアドレス＠"><img src="img/icon/icon4.png" width="28" height="28" alt="Contact">Contact</a></li> -->
+	<!-- </nav>
+	</div> -->
+	<!-- /メニューここまで -->
+	
+<!-- 	<h1>駅doko.com</h1>
+	<p class="head_des">現在地より最寄駅検索</p> -->
+
+<!-- </header> -->
+
+<div id="map_canvas" style="width:100%;height:500px;"></div>
+
+<!-- フッタここから -->
+<footer>
+
+	<!-- コピーライトここから -->
+<!-- 	<div id="copy">
+	Copyright© <a href="あなたのサイトURL">駅doko.com</a>, All rights reserved.<br>
+	</div> --><!-- /コピーライトここまで -->
+
+</footer><!-- /フッタここまで -->
+
+</body>
+</html>
