--- a/app/views/locations/resultMap.html.erb
+++ b/app/views/locations/resultMap.html.erb
@@ -27,9 +27,7 @@
 </script>
 </head>
 
-
-<body onload="initialize();">
-<!-- <header> -->
+<body onload="initialize('<%= @station.longitude %>','<%= @station.latitude %>');">
 
 	<!-- メニューここから -->
 	<!-- <div id="menu">
@@ -49,6 +47,13 @@
 
 <div id="map_canvas" style="width:100%;height:500px;"></div>
 
+<table>
+<tr>
+	<td><%= @station.station_name %></td>
+	<td><%= @station.longitude %></td>
+	<td><%= @station.latitude %></td>  
+</tr>
+</table>
 <!-- フッタここから -->
 <footer>
 
