現在位置をサーバに送る処理を追加

--- a/app/views/locations/resultMap.html.erb
+++ b/app/views/locations/resultMap.html.erb
@@ -53,6 +53,12 @@
 	<td><%= @station.longitude %></td>
 	<td><%= @station.latitude %></td>  
 </tr>
+<tr>
+	<td>現在の緯度　<%= @latitude%></td>
+</tr>
+<tr>
+	<td>現在の経度　<%= @longitude%></td>
+</tr>
 </table>
 <!-- フッタここから -->
 <footer>
